information about a particular change.

****************************************************************************
*                           General                                        *
****************************************************************************

General Improvements
--------------------


Third party components
----------------------



****************************************************************************
*                   Important Behavior Changes                             *
****************************************************************************


****************************************************************************
*                          Library                                         *
****************************************************************************


****************************************************************************
*                          Database Drivers                                *
****************************************************************************


****************************************************************************
*                      Platform Specific Changes                           *
****************************************************************************


****************************************************************************
*                      Compiler Specific Changes                           *
****************************************************************************


****************************************************************************
*                          Tools                                           *
****************************************************************************



****************************************************************************
*                          Plugins                                         *
****************************************************************************
